update-Mar-15/task-resources/upg-loadme-manifests/upg-loadme-redis -debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: redis
spec:
  containers:
  - image: redis:latest
    command:
      - "sleep"
      - "604800"
    imagePullPolicy: IfNotPresent
    name: redis
  restartPolicy: Always
